frontend: remove sizing issues with scrollbars

--- a/projects/site/src/styles/global.scss
+++ b/projects/site/src/styles/global.scss
@@ -12,9 +12,9 @@ h1 {
 }
 
 .background {
-  width: 100vw;
+  width: 100%;
   min-height: -webkit-fill-available;
-  min-height: 100vh;
+  min-height: 100%;
   transition: $theme-transition;
   background-color: var(--background-color);
   color: var(--text-color)
